[tool.poetry]
name = "pymessaging"
version = "0.1.0"
description = ""
authors = ["isaacgg <isaac.gonzalezg91@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cqrs", from = "src" },
    { include = "event_sourcing", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.9.2"
callee = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

